second commit | added multiple changes

--- a/src/main/java/com/fbistech/config/config.properties
+++ b/src/main/java/com/fbistech/config/config.properties
@@ -8,13 +8,21 @@ school_OrganizationName = FBIS Technoloogies
 
 firstName = Joseph
 
+invalidFirstName = invalidFirstName
+
 lastName = Ajayi
+
+invalidLastName = invalidLastName
 
 phoneNo = 08055503833
 
-emailAddress = ayotomjoeph@gmail.com
+invalidPhoneNo = invalid8037007878
 
-password = Jesus@Lord
+emailAddress = joseph.ajayi@fbistech.com
+
+password = Jesus@Lord_King
+
+invalidPassword = invalidPassword
 
 uploadCourseFile = please modify this field
 
