--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,17 @@
 		</dependency>
 
 
+		<dependency>
+		    <groupId>net.rcarz</groupId>
+		    <artifactId>jira-client</artifactId>
+		    <version>0.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.github.bonigarcia</groupId>
+    		<artifactId>webdrivermanager</artifactId>
+    		<version>4.2.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
