--- a/src/main/java/com/fbistech/config/config.properties
+++ b/src/main/java/com/fbistech/config/config.properties
@@ -18,9 +18,9 @@ phoneNo = 08055503833
 
 invalidPhoneNo = invalid8037007878
 
-emailAddress = joseph.ajayi@fbistech.com
+emailAddress = nirsaladmin@beamsity.com
 
-password = Jesus@Lord_King
+password = password
 
 invalidPassword = invalidPassword
 
