--- a/.classpath
+++ b/.classpath
@@ -18,7 +18,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
@@ -35,7 +35,6 @@
 	<classpathentry kind="lib" path="/Users/josephajayi/Desktop/Selenium Drivers/web-Drivers-2020/selenium-server-standalone-3.141.59.jar"/>
 	<classpathentry kind="lib" path="/Users/josephajayi/Desktop/Selenium Drivers/TestNG jar Files/testng-7.4.0.jar"/>
 	<classpathentry kind="src" path="/Beamsity_AutomationTest"/>
-	<classpathentry kind="lib" path="/Users/josephajayi/.m2/repository/com/relevantcodes/extentreports/2.41.2/extentreports-2.41.2-sources.jar"/>
 	<classpathentry kind="lib" path="/Users/josephajayi/.m2/repository/com/relevantcodes/extentreports/2.41.2/extentreports-2.41.2.jar" sourcepath="/Users/josephajayi/.m2/repository/com/relevantcodes/extentreports/2.41.2/extentreports-2.41.2-sources.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
