--- a/pom.xml
+++ b/pom.xml
@@ -90,12 +90,22 @@
 			<version>5.2.8.RELEASE</version>
 		</dependency>
 
+
+		<dependency>
+		    <groupId>com.relevantcodes</groupId>
+		    <artifactId>extentreports</artifactId>
+		    <version>2.41.2</version>
+		</dependency>
+		
+
+
 		<dependency>
 			<groupId>com.aventstack</groupId>
 			<artifactId>extentreports</artifactId>
 			<version>5.0.8</version>
 		</dependency>
 
+		
 
 		<dependency>
 		    <groupId>net.rcarz</groupId>
