added multiple changes

--- a/src/main/java/com/fbistech/config/config.properties
+++ b/src/main/java/com/fbistech/config/config.properties
@@ -1,7 +1,6 @@
 url = https://beamsity.com/
 
 
-
 browser = Chrome 
 
 school_OrganizationName = FBIS Technoloogies
@@ -20,7 +19,7 @@ invalidPhoneNo = invalid8037007878
 
 emailAddress = nirsaladmin@beamsity.com
 
-password = password
+passWord = password
 
 invalidPassword = invalidPassword
 
