Modification made to com.fbistech.pages

--- a/src/main/java/com/fbistech/config/config.properties
+++ b/src/main/java/com/fbistech/config/config.properties
@@ -35,9 +35,9 @@ passWord<6Chart = @1234
 
 userEmail = ayotomjoeph@gmail.com
 
-userEmailWithoutServerHostName = ayotomjoeph.com
+emailWithoutServerHostName = ayotomjoeph.com
 
-userEmailWithoutDomainName = ayotomjoeph@gmail
+emailWithoutDomainName = ayotomjoeph@gmail
 
 
 
