--- a/src/main/java/com/fbistech/config/config.properties
+++ b/src/main/java/com/fbistech/config/config.properties
@@ -39,6 +39,10 @@ emailWithoutServerHostName = ayotomjoeph.com
 
 emailWithoutDomainName = ayotomjoeph@gmail
 
+emptyEmail =
+
+emptyPassword =
+
 
 
 uploadCourseFile = please modify this field
